adding mobile menu

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
                 <a href="#offer"> oferta </a>
                 <a href="#contact" class="contact-link"> kontakt </a>
             </div>
+            <div class="mobile-nav-links" role="custom-dropdown">
+                <input type="checkbox" id="button">
+                <label for="button" onclick></label>                
+                <ul>
+                    <li><a href="#about"> o nas </a></li>
+                    <li><a href="#offer"> oferta </a></li>
+                    <li><a href="#contact" class="contact-link"> kontakt </a></li>
+                                        
+                </ul>
+            </div>
         </div>
     </nav>
     <main>
